--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,8 @@ typings/
 .env
 .env.dev
 .env.test
+.env.development
+.env.production
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -98,8 +100,9 @@ dist
 # FuseBox cache
 .fusebox/
 
-# DynamoDB Local files
+# Database Local files
 .dynamodb/
+database.sqlite
 
 # TernJS port file
 .tern-port
