--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "main": "index.js",
   "scripts": {
     "resetdb": "node resetDb.js",
+    "db": "node database.js",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write --ignore-unknown ./*"
@@ -20,10 +21,10 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "pg": "^8.5.1",
-    "pg-connection-string": "^2.4.0",
+    "knex": "^0.95.4",
     "prettier": "^2.2.1",
     "shelljs": "^0.8.4",
+    "sqlite3": "^5.0.2",
     "uuid": "^8.3.2"
   }
 }
